--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Floating Island</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body class="loading">
     <!-- Loading Screen -->
     <div id="loading-screen">
       <div class="spinner"></div>
@@ -101,54 +101,19 @@
       <div class="projects page">
         <button class="exit-btn">✕</button>
         <h1>Projects</h1>
-        <p>This is the projects section where I showcase my work and accomplishments.</p>
-
-        <div class="projects-list">
-          <!-- Project Row 1 -->
-          <div class="project-row">
-            <div class="project-image">
-              <img src="/Images/Project1.png" alt="Project 1">
-            </div>
-            <div class="project-info">
-              <h2>E-Commerce Digital Store</h2>
-              <p>Full-stack e-commerce web application built with React on the frontend and Node.js/Express on the backend. Users can browse a dynamic product catalog, add items to a shopping cart, and simulate checkout. Product data is stored in MongoDB, and the architecture emphasizes responsive design, modular components, and real-time state updates with React hooks. Automated tests are integrated with GitHub Actions.
-                 The live deployment showcases an end-to-end workflow from client to server, including secure data connections and frontend-backend communication.</p>
-            </div>
+        <div class="projects-layout">
+          <!-- LEFT: Thumbnails -->
+          <div class="projects-thumbs">
+            <img src="/Images/Project1.png" alt="Project 1" data-project="1">
+            <img src="/Images/Project2.png" alt="Project 2" data-project="2">
+            <img src="/Images/Project3.png" alt="Project 3" data-project="3">
+            <img src="/Images/Project4.png" alt="Project 4" data-project="4">
           </div>
 
-          <!-- Project Row 2 -->
-          <div class="project-row">
-            <div class="project-image">
-              <img src="/Images/Project2.png" alt="Project 2">
-            </div>
-            <div class="project-info">
-              <h2>Smart Waste Management Dashboard</h2>
-              <p>A JavaFX-based desktop application that provides real-time monitoring and control of city waste collection. The dashboard offers features such as fill-level tracking of smart bins, salary and work-hour analytics, and route status updates for collection teams.
-Tech stack: Java, JavaFX, RESTful APIs, and a backend database for storing sensor data and workforce information.</p>
-            </div>
-          </div>
-
-          <!-- Project Row 3 -->
-          <div class="project-row">
-            <div class="project-image">
-              <img src="/Images/Project3.png" alt="Project 3">
-            </div>
-            <div class="project-info">
-              <h2>GPS Routing & Optimization Engine</h2>
-              <p>An algorithmic module that calculates optimal collection routes for waste trucks using OSRM (Open Source Routing Machine) and custom heuristics. This engine reduces travel distance and time while ensuring all sensor-enabled bins are serviced efficiently.
-Tech stack: Java, OSRM for map and routing services, and custom path-finding algorithms.</p>
-            </div>
-          </div>
-
-          <!-- Project Row 4 -->
-          <div class="project-row">
-            <div class="project-image">
-              <img src="/Images/Project4.png" alt="Project 4">
-            </div>
-            <div class="project-info">
-              <h2>Floating Island</h2>
-              <p>3D web experience built with Three.js and Vite, showcasing projects and personal information in an immersive, game-like environment. Visitors can explore an animated floating island and interact with different signs to reveal sections such as About Me, Projects, and Overview, creating a dynamic and visually engaging way to present a developer portfolio.</p>
-            </div>
+          <!-- RIGHT: Details -->
+          <div class="project-details">
+            <h2 id="project-title">Select a project</h2>
+            <p id="project-text">Click a thumbnail on the left to view details.</p>
           </div>
         </div>
       </div>
@@ -161,3 +126,32 @@ Tech stack: Java, OSRM for map and routing services, and custom path-finding alg
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<script>
+const projectInfo = {
+  1: {
+    title: "E-Commerce Digital Store",
+    text: "Full-stack e-commerce web application built with React on the frontend and Node.js/Express on the backend. Users can browse a dynamic product catalog, add items to a shopping cart, and simulate checkout. Product data is stored in MongoDB, and the architecture emphasizes responsive design, modular components, and real-time state updates with React hooks. Automated tests are integrated with GitHub Actions.The live deployment showcases an end-to-end workflow from client to server, including secure data connections and frontend-backend communication."
+  },
+  2: {
+    title: "Smart Waste Management Dashboard",
+    text: "A JavaFX-based desktop application that provides real-time monitoring and control of city waste collection. The dashboard offers features such as fill-level tracking of smart bins, salary and work-hour analytics, and route status updates for collection teams.Tech stack: Java, JavaFX, RESTful APIs, and a backend database for storing sensor data and workforce information."
+  },
+  3: {
+    title: "GPS Routing & Optimization Engine",
+    text: "An algorithmic module that calculates optimal collection routes for waste trucks using OSRM (Open Source Routing Machine) and custom heuristics. This engine reduces travel distance and time while ensuring all sensor-enabled bins are serviced efficiently.Tech stack: Java, OSRM for map and routing services, and custom path-finding algorithms."
+  },
+  4: {
+    title: "Floating Island",
+    text: "3D web experience built with Three.js and Vite, showcasing projects and personal information in an immersive, game-like environment. Visitors can explore an animated floating island and interact with different signs to reveal sections such as About Me, Projects, and Overview, creating a dynamic and visually engaging way to present a developer portfolio."
+  }
+};
+
+document.querySelectorAll(".projects-thumbs img").forEach(img => {
+  img.addEventListener("click", () => {
+    const id = img.dataset.project;
+    document.getElementById("project-title").textContent = projectInfo[id].title;
+    document.getElementById("project-text").textContent = projectInfo[id].text;
+  });
+});
+</script>
